--- a/src/eni/seis/theme/theme-south/src/less/pages/folder_gallery_view.less
+++ b/src/eni/seis/theme/theme-south/src/less/pages/folder_gallery_view.less
@@ -1,4 +1,8 @@
 body.template-folder_gallery_view {
+  #portal-globalnav {
+    z-index: 9999; // just under lighbox when fullscreen (10000)
+  }
+
   div.photo-gallery {
     div.photo-item {
       text-align: center;
